--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 html, body {
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
-
 body {
   background-image: url(./images/white-wood.jpeg);
 }
@@ -47,18 +47,15 @@ main section .descriptionDiv {
   border-bottom: 1px solid #333;
   padding: 1rem;
   margin: 1rem;
-
 }
 main section .descriptionDiv p {
   text-align: center;
 }
-
-
 footer {
   background-image: url(./images/Aba-wood-1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-
+  color: #fff;
 }
 p {
   font-family: 'Montserrat', sans-serif;
@@ -175,10 +172,23 @@ input[type="submit"] {
   color: #fff;
 }
 
-footer div.abaHour,
-footer div.abaLocation,
-footer div.miscLink a {
+footer .abaLocation {
+  margin-top: 1rem;
+}
+
+footer nav {
+  margin-top: 1rem;
+}
+
+footer a {
   color: #fff;
+}
+footer nav li {
+  text-transform: uppercase;
+}
+
+.appImg {
+  display: none;
 }
 .hidden {
   display: none;
@@ -236,6 +246,29 @@ footer div.miscLink a {
   }
   .reservationDetails {
     flex-direction: column;
+  }
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+  }
+  footer nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
+  footer nav li {
+    margin: 1rem;
+  }
+  .appImg {
+    object-fit: cover;
+    display: block;
+  }
+
+  .appImg img {
+    max-width: 100px;
   }
 }
 /*Large Phones*/
