--- a/style.css
+++ b/style.css
@@ -16,7 +16,15 @@ header .logo {
 }
 header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+}
+header nav ul {
+  display: flex;
+
+}
+header nav ul li a {
+  color: #000
 }
 main section .image-container {
   width: 320px;
@@ -60,14 +68,12 @@ footer {
 p {
   font-family: 'Montserrat', sans-serif;
 }
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, a {
   text-transform: uppercase;
   font-family: 'Playfair Display', serif;
-  letter-spacing: .18rem;
+  letter-spacing: .2rem;
 }
-a {
-  text-decoration: none;
-}
+
 ul {
   list-style-type: none;
 }
@@ -81,11 +87,11 @@ button {
   font-family: 'Playfair Display', serif;
   text-transform: uppercase;
   cursor: pointer;
-  
 }
-input {
-  all: unset;
+input[type="submit"] {
+  border: none;
 }
+
 select {
   appearance: none;
   background-color: transparent;
@@ -98,6 +104,60 @@ select {
   cursor: inherit;
   line-height: inherit;
 }
+input[type="submit"] {
+  width: 100%;
+  border: none;
+  font-family: 'Montserrat', sans-serif;
+  height: 50px;
+}
+
+form#customerDetails input[type="text"], 
+form#customerDetails input[type="tel"], 
+form#customerDetails input[type="email"] {
+  font-size: 1.5rem;
+  border: none;
+  width: 100%;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #fff;
+  border-top: #333 solid 1px;
+}
+input[type="date"],
+select {
+  text-align: center;
+  width: 100%;
+  height: 50px;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  cursor: pointer;
+  border: none;
+  background-color: #fff;
+  border-top: #333 solid 1px;
+}
+textarea:focus, input:focus{
+  outline: none;
+}
+input[type="submit"] {
+  background-color: #003152;
+  color: #fff;
+}
+
+footer .abaLocation {
+  margin-top: 1rem;
+}
+
+footer nav {
+  margin-top: 1rem;
+}
+
+footer a {
+  color: #fff;
+}
+footer nav li {
+  text-transform: uppercase;
+}
+
 .hamburger {
   display: none; 
   cursor: pointer;
@@ -185,6 +245,7 @@ select {
   text-align: center;
   z-index: 999;
   animation: fade 0.3s ease-in;
+  color: #fff;
 }
 .closeButton {
   cursor: pointer;
@@ -192,42 +253,12 @@ select {
   font-size: 24px;
 }
 
-.reservationDetails {
+.reservationDetails,
+.customerDetails {
   display: flex;
   align-items: center;
   text-align: center;
   min-width: 100vw;
-}
-
-input[type="submit"],
-input[type="date"],
-select {
-  text-align: center;
-  width: 100%;
-  height: 50px;
-  padding: 0;
-  font-family: 'Montserrat', sans-serif;
-  cursor: pointer;
-  border-bottom: 1px solid black;
-}
-input[type="submit"] {
-  background-color: #003152;
-  color: #fff;
-}
-
-footer .abaLocation {
-  margin-top: 1rem;
-}
-
-footer nav {
-  margin-top: 1rem;
-}
-
-footer a {
-  color: #fff;
-}
-footer nav li {
-  text-transform: uppercase;
 }
 
 .appImg {
@@ -265,17 +296,12 @@ footer nav li {
   }
   .banner-grid {
     min-width: 100vw;
-    
-    
   }
-  .image1 {
+  img.image1 {
     display: none;
   }
-  .image2 {
+  img.image2 {
     max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: auto;
   }
   
   section {
@@ -289,6 +315,9 @@ footer nav li {
     overflow: hidden;
   }
   .reservationDetails {
+    flex-direction: column;
+  }
+  .customerDetails {
     flex-direction: column;
   }
   footer {
@@ -314,6 +343,7 @@ footer nav li {
   .appImg img {
     max-width: 100px;
   }
+  
 }
 /*Large Phones*/
 @media screen and (min-width: 768px) {}
