--- a/style.css
+++ b/style.css
@@ -62,10 +62,8 @@ main section .descriptionDiv {
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
-  border-top: 1px solid #333;
-  border-bottom: 1px solid #333;
   padding: 1em;
-  margin: 1em;
+  height: 100%;
 }
 main section .descriptionDiv p {
   text-align: center;
@@ -75,6 +73,27 @@ footer {
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
+  width: 100%;
+  
+}
+input[type="submit"] {
+  background-color: #003152;
+  color: #fff;
+}
+footer .abaLocation,
+footer .abaHour {
+  margin-top: 1rem;
+}
+footer nav {
+  margin-top: 1rem;
+
+}
+footer a {
+  color: #fff;
+  text-decoration: none;
+}
+footer nav li {
+  text-transform: uppercase;
 }
 p {
   font-family: 'Montserrat', sans-serif;
@@ -125,6 +144,7 @@ form#customerDetails input[type="email"] {
   font-family: 'Montserrat', sans-serif;
   border-style: none;
   border-right: 1px solid;
+  
 }
 input[type="date"],
 select {
@@ -141,22 +161,7 @@ select {
   border-style: none;
   border-right: 1px solid;
 }
-input[type="submit"] {
-  background-color: #003152;
-  color: #fff;
-}
-footer .abaLocation {
-  margin-top: 1rem;
-}
-footer nav {
-  margin-top: 1rem;
-}
-footer a {
-  color: #fff;
-}
-footer nav li {
-  text-transform: uppercase;
-}
+
 
 .hamburger {
   display: none; 
@@ -268,7 +273,7 @@ footer nav li {
   flex-direction: column;
   align-items: center;
   gap: 2em;
-  margin: 1em;
+  margin: 1em 0;
 }
 .form-container {
   width: 100%;
@@ -295,7 +300,7 @@ footer nav li {
 }
 
 
-/*Small Phones*/
+/*Small Phones - Medium Tablets*/
 @media screen and (max-width: 1023px) {
   header {
     flex-direction: column;
@@ -376,7 +381,15 @@ footer nav li {
     flex-direction: column;
     background-color: #fff;
   }
-  
+  form#customerDetails input[type="text"], 
+  form#customerDetails input[type="tel"], 
+  form#customerDetails input[type="email"] {
+    border-bottom: 1px solid;
+  }
+  input, input[type="date"], select {
+    border-bottom: 1px solid;
+    text-align: center; 
+  } 
   
   .appImg {
     width: 100%;
@@ -392,8 +405,63 @@ footer nav li {
 }
 /*Tablets + Desktop*/
 @media screen and (min-width: 1024px) {
-  body {
+  section {
     padding: 0 1em;
+  }
+  main {
+    margin: 50px;
+  }
+  section.section-flex {
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row
+  }
+  section.section-flex.reverse {
+    flex-direction: row-reverse;
+  }
+  
+  .image-container {
+    min-width: 350px;
+    height: 100%;
+
+  }
+  main section .descriptionDiv {
+    border-top: 1px solid #333;
+    border-bottom: 1px solid #333;
+  }
+  main section .descriptionDiv p {
+    letter-spacing: 0.5px;
+  }
+  main section img {
+    width: 100%;
+  }
+
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    background-size: auto;
+    position: relative;
+  }
+
+  footer nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 5em;
+  }
+  footer nav ul {
+    display: flex;
+    
+  }
+  footer nav ul li {
+    padding: 10px;
+  }
+  button {
+    width: 250px;
+    height: 40px;
   }
   .banner-grid {
     display: grid;
@@ -435,8 +503,18 @@ footer nav li {
     text-align: center;
   }
   .reservationForm {
-    padding: 20px 50px;
+    padding: 20px;
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
   }
+  .abaInfo {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+    margin-right: 20%;
+    
+  }
+  
+  
+  
 }
