--- a/style.css
+++ b/style.css
@@ -10,6 +10,16 @@ html, body {
 body {
   background-image: url(./images/white-wood.jpeg);
 }
+p, form#customerDetails input[type="text"], form#customerDetails input[type="tel"], form#customerDetails input[type="email"], select, input {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h1, h2, h3, h4, h5, a, button {
+  font-family: 'Playfair Display', serif;
+  text-transform: uppercase;
+  letter-spacing: .2rem;
+}
+
 header .logo {
   margin: 1rem;
   max-width: 100px;
@@ -95,14 +105,8 @@ footer a {
 footer nav li {
   text-transform: uppercase;
 }
-p {
-  font-family: 'Montserrat', sans-serif;
-}
-h1, h2, h3, h4, h5, a {
-  text-transform: uppercase;
-  font-family: 'Playfair Display', serif;
-  letter-spacing: .2rem;
-}
+
+
 
 ul {
   list-style-type: none;
@@ -114,7 +118,6 @@ button {
   color: #fff;
   width: 200px;
   height: 30px;
-  font-family: 'Playfair Display', serif;
   text-transform: uppercase;
   cursor: pointer;
 }
@@ -160,7 +163,6 @@ select {
   -moz-appearance: none; 
   border-style: none;
 }
-
 
 .hamburger {
   display: none; 
@@ -437,6 +439,11 @@ select {
     width: 100%;
   }
 
+  select,
+  input,
+  input[type="date"] {
+    border-right: 1px solid;
+  }
   footer {
     display: flex;
     flex-direction: column;
