--- a/styleold.css
+++ b/styleold.css
@@ -44,7 +44,6 @@ input#date, input#phone, input#name, input#email, select#time, select#people {
   border-style: none;
   width: 100%;
   text-align: center;
-  background-color: #fff;
 }
 h1, h2, h3, h4, h5, a, button {
   font-family: 'Playfair Display', serif;
@@ -78,8 +77,11 @@ h1, h2, h3, h4, h5, a, button {
   transform: translate(-50%, -50%);
   width: 200px;
 }
-.logo {
+.logo-mobile {
   display: none;
+}
+.logo {
+  display: n;
 }
 .background-overlay {
   position: absolute;
@@ -91,6 +93,9 @@ h1, h2, h3, h4, h5, a, button {
   background-color: rgba(0, 0, 0, 0.4);
 }
 header nav {
+  display: none;
+}
+section .banner-grid .banner-grid-container {
   display: none;
 }
 
@@ -139,8 +144,9 @@ footer {
 footer nav {
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   margin-top: 1rem;
 }
 .abaHour, .abaLocation {
@@ -151,15 +157,15 @@ footer nav {
   flex-direction: column;
   gap: 1rem;
 }
+footer nav ul {
+  text-align: center;
+}
 footer a {
   color: #fff;
   text-decoration: none;
-  font-size: 0.85rem;
-  text-transform: uppercase;
 }
 footer nav li {
-  margin: 1em;
-  text-align: center;
+  text-transform: uppercase;
 }
 
 
@@ -233,14 +239,15 @@ footer nav li {
   animation: fade 0.3s ease-in;
   color: #fff;
 }
+
+
 .closeButton {
   cursor: pointer;
   color: white;
   font-size: 24px;
 }
-
 /* Form */
-.reservionDetails,
+.reservationDetails,
 .customerDetails {
   display: flex;
   align-items: center;
@@ -293,34 +300,11 @@ footer nav li {
 
 /*Tablets + Desktop Screens */
 @media screen and (min-width: 768px) {
-  .header {
-    background-image: none;
-    height: auto;
-    align-items: center;
-    gap: 2em;
-    margin: 3em;
-  }
-  .header-content {
-    width: 150px;
-    top: 0%;
-    left: 0%;
-    transform: translate(0);
-  }
-  .logo {
-    display: block;
-    width: 100%;
-  
-  }
-  .background-overlay {
+  .hamburger {
     display: none;
-  }
-  header {
-    display: flex;
-    justify-content: space-around;
   }
   header nav {
     display: block;
-    width: 100%;
   }
   header nav ul {
     display: flex;
@@ -336,17 +320,7 @@ footer nav li {
   }
   header nav ul li a {
     color: #000;
-    text-decoration: none;
-  }
-  .logo-mobile {
-    display: none;
-  }
-  .hamburger {
-    display: none;
   }  
-  section .banner-grid .banner-grid-container {
-    display: block;
-  }
   .link {
     text-decoration: none;
     position: relative; 
