--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ input#date, input#phone, input#name, input#email, select#time, select#people {
   width: 100%;
   text-align: center;
   background-color: #fff;
-  display: block;
+  text-align: -webkit-center;
 }
 h1, h2, h3, h4, h5, a, button {
   font-family: 'Playfair Display', serif;
@@ -77,6 +77,7 @@ h1, h2, h3, h4, h5, a, button {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 200px;
+  cursor: pointer;
 }
 .logo {
   display: none;
@@ -126,7 +127,7 @@ main section .descriptionDiv {
 /* Footer */
 footer {
   background-image: url('images/Aba-wood-1.jpg');
-  background-size: none;
+  background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
   width: 100%;
@@ -310,6 +311,7 @@ footer nav li {
   .logo {
     display: block;
     width: 100%;
+    cursor: pointer;
   
   }
   .background-overlay {
@@ -369,10 +371,9 @@ footer nav li {
   .image2 {
     object-position: center center;
   }
-  form {
-    width: 100%;
+  form#customerDetails.customerDetails,form#reservationDetails.reservationDetails {
     display: flex;
-    margin-top: 1em;
+    flex-direction: row;
   }
  
   .reservationForm {
@@ -387,7 +388,7 @@ footer nav li {
     margin: 0;
   }
   section {
-    padding: 3em;
+    padding: 2em;
   }
   section.section-flex {
     display: flex;
