--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 ul {
   list-style-type: none;
 }
+
 button {
   background-color: #003152;
   border-style: none;
@@ -44,7 +45,7 @@ input#date, input#phone, input#name, input#email, select#time, select#people {
   width: 100%;
   text-align: center;
   background-color: #fff;
-  text-align: -webkit-center;
+  
 }
 h1, h2, h3, h4, h5, a, button {
   font-family: 'Playfair Display', serif;
@@ -177,7 +178,7 @@ footer nav li {
 .hamburger div {
   width: 30px;
   height: 3px;
-  background-color: #333;
+  background-color: #fff;
   margin: 6px 0;
   transition: 0.4s;
 }
